--- a/sports50web/templates/field_breakdown_rushing.html
+++ b/sports50web/templates/field_breakdown_rushing.html
@@ -1,45 +1,59 @@
+<!-- Load in all of the static files from .static -->
 {% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Field Breakdown Rushing</title>
 
-{{ script | safe }}
-</head>
-<body>
-<script type="text/javascript">console.log("welp")</script>
+  <head>
+    <meta charset="utf-8">
+    <title>Field Breakdown Rushing</title>
+    {{ script | safe }}
+  </head>
 
-<script type="text/javascript">
-  var location_td = JSON.parse('{{location_td | safe}}');
-</script>
-  <script type="text/javascript" src="{% static 'field_breakdown.js' %}"></script>
-<div style="position: fixed; background:#00FF7F; bottom: 20px; left: 20px; border: 3px solid #000000; padding: 3px;">
-  <small style="color:Black; font-size:20px;">Use these options to toggle between statistics</small>  
-  <br>
-  <select id="stats_choice" onchange="update()">
-    <option value="touchdown__sum">Touchdowns</option>
-    <option value="tackle_for_loss__sum">Tackled for Loss</option>
-    <option value="fumble__sum">Fumbles</option>
-    <option value="penalty__sum">Penalties</option>
-  </select> 
-    <div class="myCheckboxText">
-      <input type="checkbox" class="myCheckbox" value="2010" checked> 2010 
-      <input type="checkbox" class="myCheckbox" value="2011" checked> 2011
-      <input type="checkbox" class="myCheckbox" value="2012" checked> 2012 
-      <input type="checkbox" class="myCheckbox" value="2013" checked> 2013
-      <input type="checkbox" class="myCheckbox" value="2014" checked> 2014
-      <input type="checkbox" class="myCheckbox" value="2015" checked> 2015
-      <input type="checkbox" class="myCheckbox" value="2016" checked> 2016
-      <input type="checkbox" class="myCheckbox" value="2017" checked> 2017
+  <!-- Import in the style sheet -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" >
+
+  <body>
+    <!-- Load the location_td passing statistics data sent from views -->
+    <script type="text/javascript">var location_td = JSON.parse('{{location_td | safe}}');</script>
+
+    <!-- Load the field_breakdwon.js file --> 
+    <script type="text/javascript" src="{% static 'field_breakdown.js' %}"></script>
+
+    <!-- Create the selection options. Both a dropdown to choose between stat type and checkboxes to select years -->    
+    <div class="stat_toggle">
+
+      <small style="color:Black; font-size:20px;">Use these options to toggle between statistics</small>  
+      <br>
+
+      <!-- Create dropdown to select stat to view in graphics -->
+      <select id="stats_choice" onchange="update()">
+        <option value="touchdown__sum">Touchdowns</option>
+        <option value="tackle_for_loss__sum">Tackled for Loss</option>
+        <option value="fumble__sum">Fumbles</option>
+        <option value="penalty__sum">Penalties</option>
+      </select> 
+
+      <!-- Create checkboxes to allow years to be (de)selected. Set all to default to checked -->
+      <div class="myCheckboxText">
+        <input type="checkbox" class="myCheckbox" value="2010" checked> 2010 
+        <input type="checkbox" class="myCheckbox" value="2011" checked> 2011
+        <input type="checkbox" class="myCheckbox" value="2012" checked> 2012 
+        <input type="checkbox" class="myCheckbox" value="2013" checked> 2013
+        <input type="checkbox" class="myCheckbox" value="2014" checked> 2014
+        <input type="checkbox" class="myCheckbox" value="2015" checked> 2015
+        <input type="checkbox" class="myCheckbox" value="2016" checked> 2016
+        <input type="checkbox" class="myCheckbox" value="2017" checked> 2017
+      </div>
+
     </div>
+    <!-- With the page constructed, have the page call the update function from the field_breakdown.json file to
+    populate the graphic with data. -->    
+    <script type="text/javascript">
+      d3.selectAll(".myCheckbox").on("change",update);
+      update();  
+    </script>	
 
-</div>
-
-  <script type="text/javascript">
-  d3.selectAll(".myCheckbox").on("change",update);
-update();  
-</script>	
-</body>
+  </body>
+  
 </html>
